--- a/package.json
+++ b/package.json
@@ -11,21 +11,44 @@
     "url": "git+https://github.com/artemis-entr3rik/same-webapp.git"
   },
   "keywords": [
-    "same",
-    "webapp",
-    "saddleback",
-    "'Society",
+    "SAME",
+    "Webapp",
+    "Saddleback",
     "Military",
     "Civil",
     "Education",
     "Community",
     "Engineers",
-    "students"
+    "Students",
+    "Society of American Military Engineers"
   ],
   "author": "Dan Karlsson",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/artemis-entr3rik/same-webapp/issues"
   },
-  "homepage": "https://github.com/artemis-entr3rik/same-webapp#readme"
+  "homepage": "https://github.com/artemis-entr3rik/same-webapp#readme",
+  "directories": {
+    "test": "test",
+    "src": "src",
+    "build": "build",
+    "deploy": "deploy",
+    "dist": "dist",
+    "app": "app"
+  },
+  "devDependencies": {},
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.5.0",
+    "grunt-bower-install-simple": "^1.1.4",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.0.0",
+    "grunt-wiredep": "^2.0.0"
+  }
 }
