--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "homepage": "https://github.com/artemis-entr3rik/same-webapp",
   "authors": [
-    "Dan Karlsson <dan.e.karlsson@jpl.nasa.gov>"
+    "Erik Karlsson <erikdkarlsson8@gmail.com>"
   ],
   "description": "App for Saddleback Chapter of SAME",
-  "main": "gruntfile.js",
+  "main": "index.js",
   "keywords": [
     "same",
     "webapp",
