--- a/package.json
+++ b/package.json
@@ -36,8 +36,17 @@
     "dist": "dist",
     "app": "app"
   },
-  "devDependencies": {},
+  "devDependencies": {
+
+  },
   "dependencies": {
+    "angular": "^1.4.6",
+    "angular-animate": "^1.4.6",
+    "angular-aria": "^1.4.6",
+    "angular-bootstrap": "^0.12.2",
+    "angular-material": "^0.11.1",
+    "angular-router": "0.0.2",
+    "bower": "^1.5.3",
     "grunt": "^0.4.5",
     "grunt-bower-concat": "^0.5.0",
     "grunt-bower-install-simple": "^1.1.4",
