--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.4.6",
+    "angular-ui": "~0.4.0",
+    "angular-bootstrap": "~0.13.4",
+    "bootstrap": "~3.3.5"
+  }
 }
