--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "app": "app"
   },
   "devDependencies": {
-
+    "grunt-contrib-sass": "^0.9.2"
   },
   "dependencies": {
     "angular": "^1.4.6",
@@ -48,6 +48,7 @@
     "angular-router": "0.0.2",
     "bower": "^1.5.3",
     "grunt": "^0.4.5",
+    "grunt-bower": "^0.20.0",
     "grunt-bower-concat": "^0.5.0",
     "grunt-bower-install-simple": "^1.1.4",
     "grunt-contrib-clean": "^0.6.0",
@@ -58,6 +59,7 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.0.0",
-    "grunt-wiredep": "^2.0.0"
+    "grunt-wiredep": "^2.0.0",
+    "sass": "^0.5.0"
   }
 }
