--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-material": "~0.11.1",
     "angular-ui-router": "~0.2.15",
     "firebase": "~2.3.0",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "angular-messages": "~1.4.7"
   }
 }
