--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
     "angular-ui-router": "~0.2.15",
     "firebase": "~2.3.0",
     "angularfire": "~1.1.2",
-    "angular-messages": "~1.4.7",
-    "material-design-icons": "~2.0.0"
+    "angular-messages": "~1.4.7"
   }
 }
