--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "app": "app"
   },
   "devDependencies": {
+    "angular-md5": "^0.1.8",
     "bower": "^1.5.3",
     "grunt": "^0.4.5",
     "grunt-bower": "^0.20.0",
@@ -47,10 +48,10 @@
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-wiredep": "^2.0.0",
-    "grunt-contrib-sass": "^0.9.2"
+    "grunt-wiredep": "^2.0.0"
   },
   "dependencies": {
     "angular": "^1.4.6",
