--- a/bower.json
+++ b/bower.json
@@ -31,5 +31,8 @@
     "angularfire": "~1.1.2",
     "angular-messages": "~1.4.7",
     "angular-md5": "~0.1.8"
+  },
+  "devDependencies": {
+    "angular-md5": "~0.1.10"
   }
 }
