--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.12.1",
+    "grunt-protractor-runner": "^2.1.0",
+    "grunt-sass": "^1.1.0",
     "grunt-wiredep": "^2.0.0"
   },
   "dependencies": {
