Added a vagrant box for development. Experimenting with new developer tools and technology. Docker next.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-.idea
-vendor
-data-oriented-ex
+.idea/
+vendor/
+#data-oriented-ex
 firebase.json
-node_modules
+node_modules/
 deploy
-build
-my-server
-/lib
-bower_components
+build/
+#my-server
+#/lib
+bower_components/
 img/**
-app/img
+app/img/
+.vagrant/
