--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.12.1",
-    "grunt-protractor-runner": "^2.1.0",
+    "grunt-protractor-runner": "^2.1.2",
     "grunt-sass": "^1.1.0",
-    "grunt-wiredep": "^2.0.0"
+    "grunt-wiredep": "^2.0.0",
+    "karma": "^0.13.15"
   },
   "dependencies": {
     "angular": "^1.4.6",
